# zendesk-ticket-intelligence

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.pipeline  docker-compose.dev.yml  docker-compose.server.yml  docker-compose.yml
docs/: cluster-visualization-dimensions.md  remote-development.md
prd/: zen.md
scripts/: bootstrap.sh  cluster_all_tickets.py  embed_all_summaries.py  healthcheck.sh  install_hdbscan_deps.sh  restart-gpu-api.sh  resummarize_all.py  setup-gpu-machine.sh  test_mcp_ticket.py
services/api/: __init__.py  main.py
services/chat/: __init__.py
services/embed_cluster/: __init__.py  cli.py  clusterer.py  embedder.py  labeler.py  summarizer.py  vector_store.py
services/ingest/: Dockerfile  __init__.py  cli.py  client.py  main.py  requirements.txt  storage.py
services/kg_extract/: __init__.py
services/normalize/: __init__.py  cli.py  normalizer.py  redactor.py
services/pipeline/: __init__.py  incremental.py  run_pipeline.py
services/ui/: __init__.py
services/ui/cluster-explorer/: Dockerfile  next.config.ts  package-lock.json  package.json
services/ui/cluster-explorer/app/: globals.css  layout.tsx  page.tsx
services/ui/cluster-explorer/app/chat/: page.tsx
services/ui/cluster-explorer/app/components/: cluster-graph.tsx
services/ui/cluster-explorer/app/overview/: page.tsx
services/ui/cluster-explorer/components/: cluster-details.tsx  cluster-force-graph.tsx  cluster-graph-view.tsx  cluster-search.tsx  clusters-table.tsx  enhanced-graph-visualization.tsx  force-graph-wrapper.tsx  theme-provider.tsx  ticket-scatter-plot.tsx
services/ui/cluster-explorer/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  select.tsx  separator.tsx  table.tsx  (+2 more)
services/ui/cluster-explorer/lib/: api.ts  types.ts
shared/config/: __init__.py
shared/prompts/: __init__.py
shared/schemas/: __init__.py  cluster.py  graph.py  ticket.py
shared/utils/: __init__.py
tests/: __init__.py
